# Diploma

./: FinalReport.docx  README.md  map_route.html  pyproject.toml  requirements.txt  route_app.py
app/configs/: settings.py
app/database/: db_utils.py
app/routing/: map_utils.py
tests/: README.MD  test_database.py  test_gui.py  test_main.py  test_routing.py
