[project]
name = "routingapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.19.5",
    "geopy>=2.4.1",
    "loguru>=0.7.3",
    "networkx>=3.4.2",
    "osmnx>=2.0.2",
    "pdfplumber>=0.11.6",
    "pyodbc>=5.2.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "scikit-learn>=1.6.1",
]
